--- a/requirements.txt
+++ b/requirements.txt
@@ -11,12 +11,12 @@ argon2-cffi==23.1.0
 argon2-cffi-bindings==21.2.0
 arrow==1.3.0
 asgiref==3.8.1
-asttokens @ file:///home/conda/feedstock_root/build_artifacts/asttokens_1698341106958/work
+asttokens==2.4.1
 async-lru==2.0.4
 async-timeout==4.0.3
 attrs==23.2.0
 Babel==2.14.0
-backcall @ file:///home/conda/feedstock_root/build_artifacts/backcall_1592338393461/work
+backcall==0.2.0
 backoff==2.2.1
 bcrypt==4.2.0
 beautifulsoup4==4.12.3
@@ -35,9 +35,9 @@ click==8.1.7
 click-plugins==1.1.1
 cligj==0.7.2
 cloudpickle==3.0.0
-colorama @ file:///home/conda/feedstock_root/build_artifacts/colorama_1666700638685/work
+colorama==0.4.6
 coloredlogs==15.0.1
-comm @ file:///home/conda/feedstock_root/build_artifacts/comm_1704278392174/work
+comm==0.2.1
 contourpy==1.1.1
 cycler==0.10.0
 Cython==3.0.9
@@ -46,8 +46,8 @@ dash-core-components==2.0.0
 dash-html-components==2.0.0
 dash-table==5.0.0
 dataclasses-json==0.6.7
-debugpy @ file:///C:/b/abs_c0y1fjipt2/croot/debugpy_1690906864587/work
-decorator @ file:///home/conda/feedstock_root/build_artifacts/decorator_1641555617451/work
+debugpy==1.6.7
+decorator==5.1.1
 defusedxml==0.7.1
 Deprecated==1.2.14
 deprecation==2.1.0
@@ -58,7 +58,7 @@ email_validator==2.1.1
 emoji==2.12.1
 et-xmlfile==1.1.0
 exceptiongroup==1.2.0
-executing @ file:///home/conda/feedstock_root/build_artifacts/executing_1698579936712/work
+executing==2.0.1
 fastapi==0.111.0
 fastapi-cli==0.0.4
 fastjsonschema==2.19.1
@@ -88,15 +88,15 @@ huggingface-hub==0.23.3
 humanfriendly==10.0
 idna==2.10
 imbalanced-learn==0.12.0
-importlib-metadata @ file:///home/conda/feedstock_root/build_artifacts/importlib-metadata_1703269254275/work
+importlib-metadata==7.0.1
 importlib_resources==6.1.2
 intel-openmp==2024.1.2
-ipykernel @ file:///D:/bld/ipykernel_1708996677248/work
-ipython @ file:///D:/bld/ipython_1680185618122/work
+ipykernel==6.29.3
+ipython==8.12.0
 ipywidgets==8.1.2
 isoduration==20.11.0
 itsdangerous==2.1.2
-jedi @ file:///home/conda/feedstock_root/build_artifacts/jedi_1696326070614/work
+jedi==0.19.1
 Jinja2==3.1.2
 joblib==1.3.2
 json5==0.9.19
@@ -105,11 +105,11 @@ jsonpointer==2.4
 jsonschema==4.21.1
 jsonschema-specifications==2023.12.1
 jupyter==1.0.0
+jupyter_client==8.6.0
 jupyter-console==6.6.3
+jupyter_core==4.12.0
 jupyter-events==0.9.0
 jupyter-lsp==2.2.3
-jupyter_client @ file:///home/conda/feedstock_root/build_artifacts/jupyter_client_1699283905679/work
-jupyter_core @ file:///D:/bld/jupyter_core_1669775263822/work
 jupyter_server==2.12.5
 jupyter_server_terminals==0.5.2
 jupyterlab==4.1.2
@@ -142,12 +142,12 @@ markdown-it-py==3.0.0
 MarkupSafe==2.1.3
 marshmallow==3.21.3
 matplotlib==3.6.0
-matplotlib-inline @ file:///home/conda/feedstock_root/build_artifacts/matplotlib-inline_1660814786464/work
+matplotlib-inline==0.1.6
 mdurl==0.1.2
 mistune==3.0.2
 mkl==2024.1.0
-mkl-fft @ file:///C:/b/abs_19i1y8ykas/croot/mkl_fft_1695058226480/work
-mkl-random @ file:///C:/b/abs_edwkj1_o69/croot/mkl_random_1695059866750/work
+mkl-fft==1.3.8
+mkl-random==1.2.4
 mkl-service==2.4.0
 mmh3==4.1.0
 monotonic==1.6
@@ -158,13 +158,13 @@ natsort==8.4.0
 nbclient==0.9.0
 nbconvert==7.16.1
 nbformat==5.9.2
-nest_asyncio @ file:///home/conda/feedstock_root/build_artifacts/nest-asyncio_1705850609492/work
+nest_asyncio==1.6.0
 networkx==3.0
 nltk==3.8.1
 notebook==7.1.1
 notebook_shim==0.2.4
 numba==0.58.1
-numpy @ file:///C:/Users/dev-admin/mkl/numpy_and_numpy_base_1682982345978/work
+numpy==1.24.3
 oauthlib==3.2.2
 onnx==1.16.1
 onnxruntime==1.18.0
@@ -185,13 +185,14 @@ opentelemetry-semantic-conventions==0.47b0
 opentelemetry-util-http==0.47b0
 orjson==3.9.15
 overrides==7.7.0
-packaging @ file:///home/conda/feedstock_root/build_artifacts/packaging_1696202382185/work
+packaging==23.2
 pandas==1.5.3
 pandocfilters==1.5.1
-parso @ file:///home/conda/feedstock_root/build_artifacts/parso_1638334955874/work
+parso==0.8.3
 patsy==0.5.6
-pickleshare @ file:///home/conda/feedstock_root/build_artifacts/pickleshare_1602536217715/work
+pickleshare==0.7.5
 pillow==10.2.0
+pip==24.3.1
 pkgutil_resolve_name==1.3.10
 plotly==5.19.0
 plotly-resampler==0.9.2
@@ -199,10 +200,10 @@ pmdarima==2.0.4
 posthog==3.5.0
 prettytable==3.10.0
 prometheus_client==0.20.0
-prompt-toolkit @ file:///home/conda/feedstock_root/build_artifacts/prompt-toolkit_1702399386289/work
+prompt-toolkit==3.0.42
 protobuf==4.25.3
-psutil @ file:///C:/Windows/Temp/abs_b2c2fd7f-9fd5-4756-95ea-8aed74d0039flsd9qufz/croots/recipe/psutil_1656431277748/work
-pure-eval @ file:///home/conda/feedstock_root/build_artifacts/pure_eval_1642875951954/work
+psutil==5.9.0
+pure-eval==0.2.2
 py-cpuinfo==9.0.0
 pyarrow==17.0.0
 pyasn1==0.5.1
@@ -214,14 +215,14 @@ pydantic_core==2.18.4
 pydeck==0.9.1
 pydub==0.25.1
 pyecharts==2.0.6
-Pygments @ file:///home/conda/feedstock_root/build_artifacts/pygments_1700607939962/work
+Pygments==2.17.2
 pyod==1.1.3
 pyparsing==3.1.1
 pypdf==4.3.1
 PyPika==0.48.9
 pyproject_hooks==1.1.0
 pyreadline3==3.4.1
-python-dateutil @ file:///home/conda/feedstock_root/build_artifacts/python-dateutil_1709299778482/work
+python-dateutil==2.9.0
 python-dotenv==1.0.1
 python-json-logger==2.0.7
 python-magic==0.4.27
@@ -230,7 +231,7 @@ pytz==2024.1
 #pywin32==227
 #pywinpty==2.0.13
 PyYAML==6.0.1
-pyzmq @ file:///C:/b/abs_89aq69t0up/croot/pyzmq_1705605705281/work
+pyzmq==25.1.2
 qtconsole==5.5.1
 QtPy==2.4.1
 rasterio==1.3.10
@@ -257,9 +258,10 @@ seaborn==0.13.2
 seedir==0.4.2
 semantic-version==2.10.0
 Send2Trash==1.8.2
+setuptools==68.2.2
 shellingham==1.5.4
 simplejson==3.19.2
-six @ file:///home/conda/feedstock_root/build_artifacts/six_1620240208055/work
+six==1.16.0
 sktime==0.21.1
 smmap==5.0.1
 sniffio==1.3.1
@@ -268,7 +270,7 @@ soupsieve==2.5
 spark-ai-python==0.4.1
 spectral==0.23.1
 SQLAlchemy==2.0.32
-stack-data @ file:///home/conda/feedstock_root/build_artifacts/stack_data_1669632077133/work
+stack-data==0.6.2
 starlette==0.37.2
 statsmodels==0.14.1
 streamlit==1.40.1
@@ -294,14 +296,14 @@ torch-summary==1.4.5
 torchaudio==2.2.1+cu118
 torchinfo==1.8.0
 torchvision==0.17.1+cu118
-tornado @ file:///D:/bld/tornado_1656937958156/work
+tornado==6.2
 tqdm==4.66.2
-traitlets @ file:///home/conda/feedstock_root/build_artifacts/traitlets_1704212992681/work
+traitlets==5.14.1
 tsdownsample==0.1.2
 typer==0.12.3
 types-python-dateutil==2.8.19.20240106
+typing_extensions==4.10.0
 typing-inspect==0.9.0
-typing_extensions @ file:///home/conda/feedstock_root/build_artifacts/typing_extensions_1708904622550/work
 ujson==5.10.0
 ultralytics==8.2.31
 ultralytics-thop==0.2.8
@@ -310,15 +312,16 @@ urllib3==2.2.1
 uvicorn==0.30.1
 watchdog==4.0.2
 watchfiles==0.22.0
-wcwidth @ file:///home/conda/feedstock_root/build_artifacts/wcwidth_1704731205417/work
+wcwidth==0.2.13
 webcolors==1.13
 webencodings==0.5.1
 websocket-client==1.7.0
 websockets==11.0.3
 Werkzeug==3.0.1
+wheel==0.41.2
 widgetsnbextension==4.0.10
 wrapt==1.16.0
 xxhash==3.4.1
 yarl==1.9.4
 yellowbrick==1.5
-zipp @ file:///home/conda/feedstock_root/build_artifacts/zipp_1695255097490/work
+zipp==3.17.0
