--- a/requirements.txt
+++ b/requirements.txt
@@ -1,327 +1,50 @@
-absl-py==2.1.0
-affine==2.4.0
-aiofiles==23.2.1
-aiohappyeyeballs==2.3.4
-aiohttp==3.10.1
-aiosignal==1.3.1
-altair==5.3.0
-annotated-types==0.7.0
-anyio==4.3.0
-argon2-cffi==23.1.0
-argon2-cffi-bindings==21.2.0
-arrow==1.3.0
-asgiref==3.8.1
-asttokens==2.4.1
-async-lru==2.0.4
-async-timeout==4.0.3
-attrs==23.2.0
-Babel==2.14.0
-backcall==0.2.0
-backoff==2.2.1
-bcrypt==4.2.0
-beautifulsoup4==4.12.3
-bleach==6.1.0
-blinker==1.7.0
-build==1.2.1
-cachetools==5.3.3
-category-encoders==2.6.3
-certifi==2023.7.22
-cffi==1.16.0
-chardet==4.0.0
-charset-normalizer==3.3.2
-chroma-hnswlib==0.7.6
-chromadb==0.5.5
+altair==5.4.1
+attrs==24.2.0
+blinker==1.9.0
+cachetools==5.5.0
+certifi==2024.8.30
+charset-normalizer==3.4.0
 click==8.1.7
-click-plugins==1.1.1
-cligj==0.7.2
-cloudpickle==3.0.0
 colorama==0.4.6
-coloredlogs==15.0.1
-comm==0.2.1
-contourpy==1.1.1
-cycler==0.10.0
-Cython==3.0.9
-dash==2.16.1
-dash-core-components==2.0.0
-dash-html-components==2.0.0
-dash-table==5.0.0
-dataclasses-json==0.6.7
-debugpy==1.6.7
-decorator==5.1.1
-defusedxml==0.7.1
-Deprecated==1.2.14
-deprecation==2.1.0
-dirtyjson==1.0.8
-distro==1.9.0
-dnspython==2.6.1
-email_validator==2.1.1
-emoji==2.12.1
-et-xmlfile==1.1.0
-exceptiongroup==1.2.0
-executing==2.0.1
-fastapi==0.111.0
-fastapi-cli==0.0.4
-fastjsonschema==2.19.1
-ffmpy==0.3.2
-filelock==3.9.0
-Flask==3.0.2
-flatbuffers==24.3.25
-fonttools==4.49.0
-fqdn==1.5.1
-frozenlist==1.4.1
-fsspec==2024.6.0
 gitdb==4.0.11
 GitPython==3.1.43
-google-auth==2.28.1
-google-auth-oauthlib==1.0.0
-googleapis-common-protos==1.63.2
-gradio==4.36.1
-gradio_client==1.0.1
-graphlib_backport==1.1.0
-greenlet==3.0.3
-grpcio==1.62.0
-h11==0.14.0
-httpcore==1.0.4
-httptools==0.6.1
-httpx==0.27.0
-huggingface-hub==0.23.3
-humanfriendly==10.0
-idna==2.10
-imbalanced-learn==0.12.0
-importlib-metadata==7.0.1
-importlib_resources==6.1.2
-intel-openmp==2024.1.2
-ipykernel==6.29.3
-ipython==8.12.0
-ipywidgets==8.1.2
-isoduration==20.11.0
-itsdangerous==2.1.2
-jedi==0.19.1
-Jinja2==3.1.2
-joblib==1.3.2
-json5==0.9.19
-jsonpatch==1.33
-jsonpointer==2.4
-jsonschema==4.21.1
-jsonschema-specifications==2023.12.1
-jupyter==1.0.0
-jupyter_client==8.6.0
-jupyter-console==6.6.3
-jupyter_core==4.12.0
-jupyter-events==0.9.0
-jupyter-lsp==2.2.3
-jupyter_server==2.12.5
-jupyter_server_terminals==0.5.2
-jupyterlab==4.1.2
-jupyterlab_pygments==0.3.0
-jupyterlab_server==2.25.3
-jupyterlab_widgets==3.0.10
-kaleido==0.2.1
-kiwisolver==1.4.5
-kubernetes==30.1.0
-lightgbm==4.3.0
-llama-cloud==0.0.11
-llama-index==0.10.61
-llama-index-agent-openai==0.2.9
-llama-index-cli==0.1.13
-llama-index-core==0.10.61
-llama-index-embeddings-openai==0.1.11
-llama-index-indices-managed-llama-cloud==0.2.7
-llama-index-legacy==0.9.48
-llama-index-llms-openai==0.1.27
-llama-index-multi-modal-llms-openai==0.1.8
-llama-index-program-openai==0.1.7
-llama-index-question-gen-openai==0.1.3
-llama-index-readers-file==0.1.32
-llama-index-readers-llama-parse==0.1.6
-llama-index-vector-stores-chroma==0.1.10
-llama-parse==0.4.9
-llvmlite==0.41.1
-Markdown==3.5.2
+idna==3.10
+Jinja2==3.1.4
+jsonschema==4.23.0
+jsonschema-specifications==2024.10.1
 markdown-it-py==3.0.0
-MarkupSafe==2.1.3
-marshmallow==3.21.3
-matplotlib==3.6.0
-matplotlib-inline==0.1.6
+MarkupSafe==3.0.2
 mdurl==0.1.2
-mistune==3.0.2
-mkl==2024.1.0
-mkl-fft==1.3.8
-mkl-random==1.2.4
-mkl-service==2.4.0
-mmh3==4.1.0
-monotonic==1.6
-mpmath==1.3.0
-multidict==6.0.5
-mypy-extensions==1.0.0
-natsort==8.4.0
-nbclient==0.9.0
-nbconvert==7.16.1
-nbformat==5.9.2
-nest_asyncio==1.6.0
-networkx==3.0
-nltk==3.8.1
-notebook==7.1.1
-notebook_shim==0.2.4
-numba==0.58.1
-numpy==1.24.3
-oauthlib==3.2.2
-onnx==1.16.1
-onnxruntime==1.18.0
-openai==1.35.14
-opencv-contrib-python==4.10.0.84
-opencv-python==4.9.0.80
-opencv-python-headless==4.8.0.74
-openpyxl==3.1.4
-opentelemetry-api==1.26.0
-opentelemetry-exporter-otlp-proto-common==1.26.0
-opentelemetry-exporter-otlp-proto-grpc==1.26.0
-opentelemetry-instrumentation==0.47b0
-opentelemetry-instrumentation-asgi==0.47b0
-opentelemetry-instrumentation-fastapi==0.47b0
-opentelemetry-proto==1.26.0
-opentelemetry-sdk==1.26.0
-opentelemetry-semantic-conventions==0.47b0
-opentelemetry-util-http==0.47b0
-orjson==3.9.15
-overrides==7.7.0
-packaging==23.2
-pandas==1.5.3
-pandocfilters==1.5.1
-parso==0.8.3
-patsy==0.5.6
-pickleshare==0.7.5
-pillow==10.2.0
-pip==24.3.1
-pkgutil_resolve_name==1.3.10
-plotly==5.19.0
-plotly-resampler==0.9.2
-pmdarima==2.0.4
-posthog==3.5.0
-prettytable==3.10.0
-prometheus_client==0.20.0
-prompt-toolkit==3.0.42
-protobuf==4.25.3
-psutil==5.9.0
-pure-eval==0.2.2
-py-cpuinfo==9.0.0
-pyarrow==17.0.0
-pyasn1==0.5.1
-pyasn1-modules==0.3.0
-pycaret==3.2.0
-pycparser==2.21
-pydantic==2.7.4
-pydantic_core==2.18.4
+narwhals==1.14.1
+numpy==2.1.3
+packaging==24.2
+pandas==2.2.3
+patsy==1.0.1
+pillow==11.0.0
+pip==24.2
+plotly==5.24.1
+plotly-express==0.4.1
+protobuf==5.28.3
+pyarrow==18.0.0
 pydeck==0.9.1
-pydub==0.25.1
-pyecharts==2.0.6
-Pygments==2.17.2
-pyod==1.1.3
-pyparsing==3.1.1
-pypdf==4.3.1
-PyPika==0.48.9
-pyproject_hooks==1.1.0
-pyreadline3==3.4.1
-python-dateutil==2.9.0
-python-dotenv==1.0.1
-python-json-logger==2.0.7
-python-magic==0.4.27
-python-multipart==0.0.9
-pytz==2024.1
-#pywin32==227
-#pywinpty==2.0.13
-PyYAML==6.0.1
-pyzmq==25.1.2
-qtconsole==5.5.1
-QtPy==2.4.1
-rasterio==1.3.10
-referencing==0.33.0
-regex==2024.7.24
-requests==2.31.0
-requests-oauthlib==1.3.1
-requests-toolbelt==1.0.0
-retrying==1.3.4
-rfc3339-validator==0.1.4
-rfc3986-validator==0.1.1
-rich==13.7.1
-roboflow==1.1.32
-rpds-py==0.18.0
-rsa==4.9
-ruff==0.4.8
-safetensors==0.4.5
-schemdraw==0.15
-scikit-base==0.5.2
-scikit-learn==1.2.2
-scikit-plot==0.3.7
-scipy==1.10.1
-seaborn==0.13.2
-seedir==0.4.2
-semantic-version==2.10.0
-Send2Trash==1.8.2
-setuptools==68.2.2
-shellingham==1.5.4
-simplejson==3.19.2
+Pygments==2.18.0
+python-dateutil==2.9.0.post0
+pytz==2024.2
+referencing==0.35.1
+requests==2.32.3
+rich==13.9.4
+rpds-py==0.21.0
+scipy==1.14.1
+setuptools==75.1.0
 six==1.16.0
-sktime==0.21.1
 smmap==5.0.1
-sniffio==1.3.1
-snuggs==1.4.7
-soupsieve==2.5
-spark-ai-python==0.4.1
-spectral==0.23.1
-SQLAlchemy==2.0.32
-stack-data==0.6.2
-starlette==0.37.2
-statsmodels==0.14.1
+statsmodels==0.14.4
 streamlit==1.40.1
-striprtf==0.0.26
-sympy==1.12
-tbats==1.1.3
-tbb==2021.12.0
-tenacity==8.2.3
-tensorboard==2.14.0
-tensorboard-data-server==0.7.2
-terminado==0.18.0
-threadpoolctl==3.3.0
-tiktoken==0.7.0
-timm==1.0.11
-tinycss2==1.2.1
-tokenizers==0.19.1
+tenacity==9.0.0
 toml==0.10.2
-tomli==2.0.1
-tomlkit==0.12.0
-toolz==0.12.1
-torch==2.2.1+cu118
-torch-summary==1.4.5
-torchaudio==2.2.1+cu118
-torchinfo==1.8.0
-torchvision==0.17.1+cu118
-tornado==6.2
-tqdm==4.66.2
-traitlets==5.14.1
-tsdownsample==0.1.2
-typer==0.12.3
-types-python-dateutil==2.8.19.20240106
-typing_extensions==4.10.0
-typing-inspect==0.9.0
-ujson==5.10.0
-ultralytics==8.2.31
-ultralytics-thop==0.2.8
-uri-template==1.3.0
-urllib3==2.2.1
-uvicorn==0.30.1
-watchdog==4.0.2
-watchfiles==0.22.0
-wcwidth==0.2.13
-webcolors==1.13
-webencodings==0.5.1
-websocket-client==1.7.0
-websockets==11.0.3
-Werkzeug==3.0.1
-wheel==0.41.2
-widgetsnbextension==4.0.10
-wrapt==1.16.0
-xxhash==3.4.1
-yarl==1.9.4
-yellowbrick==1.5
-zipp==3.17.0
+tornado==6.4.2
+typing_extensions==4.12.2
+tzdata==2024.2
+urllib3==2.2.3
+watchdog==6.0.0
+wheel==0.44.0
